cluster/base/infrastructure/22-schenkmatch/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: schenkmatch
  namespace: schenkmatch
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - schenkmatch.homelab.data-harness.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExternalAuth
          externalAuth:
            backendRef:
              name: opa
              namespace: security
              port: 9191
            protocol: GRPC
            grpc: {}
      backendRefs:
        - name: schenkmatch
          port: 3000
